--- a/internship_system/placement/templates/student/internship_list.html
+++ b/internship_system/placement/templates/student/internship_list.html
@@ -39,11 +39,21 @@
 <!-- INTERNSHIP LIST -->
 {% for internship in internships %}
     <div class="internship-card">
-        <h3>{{ internship.title }}</h3>
-        <p><strong>Company:</strong> {{ internship.company.company_name }}</p>
-        <p><strong>Location:</strong> {{ internship.location }}</p>
-        <p><strong>Duration:</strong> {{ internship.start_date }} - {{ internship.end_date }}</p>
-        <p><strong>Slots:</strong> {{ internship.total_slots }}</p>
+        <h3><span style="color: blue;">{{ internship.title }}</span></h3>
+        <p><span style="color: black;">Company:</span> {{ internship.company.company_name }}</p>
+        <p><span style="color: black;">Location:</span> {{ internship.location }}</p>
+        <p><span style="color: black;">Description:</span> {{ internship.description }}</p>
+        <p><span style="color: black;">Requirements:</span> {{ internship.requirements }}</p>
+        <p><span style="color: black;">Duration:</span> {{ internship.start_date }} - {{ internship.end_date }}</p>
+        <p><span style="color: black;">Slots:</span> {{ internship.total_slots }}</p>
+        <p>
+            <strong>Status:</strong> 
+            {% if internship.status == "Open" %}
+                <span style="color: green;">Open</span>
+            {% else %}
+                <span style="color: red;">Closed</span>
+            {% endif %}
+        </p>
 
     {% if internship.has_applied %}
         <span class="badge badge-applied">Already Applied</span>
