--- a/internship_system/placement/templates/academic/academic_dashboard.html
+++ b/internship_system/placement/templates/academic/academic_dashboard.html
@@ -88,11 +88,8 @@
 											</div>
 											<div class="profile-item">
 												<div class="profile-label">Programme</div>
-												<div class="profile-value">{{ s.programme }}</div>
+												<div class="profile-value">{{ s.program }}</div>
 											</div>
-										</div>
-										<div class="form-actions" style="margin-top: 16px; justify-content: flex-end;">
-											<a href="{% url 'academic_student_detail' s.id %}" class="btn btn-primary">View Profile</a>
 										</div>
 									</div>
 									{% endfor %}
