--- a/internship_system/placement/templates/academic/academic_dashboard.html
+++ b/internship_system/placement/templates/academic/academic_dashboard.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<i class="fas fa-users" style="font-size: 24px; line-height: 48px;"></i>
 							<h1 id="title">{{ request.user.username }}</h1>
 							<p>{{ request.user.role }}</p>
                             <a href="{% url 'logout' %}">Logout</a>
